themes/Modern/styles.css
/* ... */
/*Prefere having OS icon on hover*/
li.win32 a:hover{
	background: #999 url('../../images/os/win32.png') no-repeat 97% center !important;
	background-size: 20px auto;
}
li.linux32 a:hover{
	background: #999 url('../../images/os/linux32.png') no-repeat 97% center !important;
	background-size: 20px auto;
}
li.win64 a:hover{
	background: #999 url('../../images/os/win64.png') no-repeat 97% center !important;
	background-size: 20px auto;
}
li.linux64 a:hover{
	background: #999 url('../../images/os/linux64.png') no-repeat 97% center !important;
	background-size: 20px auto;
}
.menu li ul{
	background: #292929;
	border:#000 solid 1px;
	display:none;
	height:auto;
	padding:0px;
	margin:0px;
	position:absolute;
	width:auto;
	z-index:200;
	/*top:1em;
	/*left:0;*/
}
.menu li:hover ul{
	display:block;
}
.menu li li {
	display:block;
	float:none;
	margin: 5px;
	padding:0px;
	width: auto;
}
.menu li:hover li a{
	background:none;
	}
.menu li ul a{
	display:block;
	/* 
	   height is not correct here, as extra long lines wrap and overwrite text rather than expanding 
	   It should be min-height
	*/
	min-height:35px;
	font-size:11px;
	font-style:normal;
	margin:0px;
	padding: 0px 10px 0px 10px;
	text-align:left;
	border-radius: 7px;
}
.menu li ul a:hover, .menu li ul li:hover a{
	background: #7f7f7f url('images/hover_sub.gif') center left no-repeat;
	color: #FFF;
	border:0px;
	text-decoration:none;
}
.menu p{
	clear:left;
}	
	
.user_menu_link_selected{
	background-color:#494949;
	background-image:url("images/hover.gif");
	background-position:bottom center;
	background-repeat:no-repeat;
}
.admin_menu_link_selected{
	background-color:#494949;
	background-image:url("images/hover.gif");
	background-position:bottom center;
	background-repeat:no-repeat;
}

#submenu_1{
	margin-left:100%;
	margin-top:-40px;
	border:0;
	white-space: nowrap;
	border-radius: 7px;
}
#submenu_0 li{
	cursor:default !important;
	margin-right:0px;
	margin-left:0px;
}
#submenu_1 li{
	display:none;
	margin-left:0px;
	margin-right:0px;
}
#submenu_1 li a{
	background:none !important;
}
#submenu_1 li:hover a{
	background:#7f7f7f url('images/hover_sub.gif') center left no-repeat !important;
}
#submenu_0 li:hover ul li{
	display:block;
}
/*End Of Menu*/


.hostname {
	font-size:10pt;
	text-shadow: gray 0.1em 0.1em 0.2em;
	background-color:#E8E8E8;
	width:200px;
	border-top:2px solid gray;
	border-bottom:2px solid gray;
}

.server_monitor {
	width:auto;
	text-align:center;
	border: 1px solid #000000;
}

.player_monitor {
	text-align:left;
	width:auto;
	border:1px solid #000000;
}

li.current {
	background-color:#DEC292;
	color: #FFFFFF;
} 

h0 {
	color:#333;
	margin:10px 0 10px 0;
	clear:both;
	width:920px;
	height:35px;
	background:#f5f5f5;
	border-top-style:solid;
	border-top-color:#cfcfcf;
	border-top-width:1px;
	border-bottom-style:solid;
	border-bottom-color:#cfcfcf;
	border-bottom-width:1px;
	padding-top:10px;
	margin-left:-10px;
	text-align: center;
	font-family:"Trebuchet MS";
	font-size:20px;
	display:block;
	font-weight:bold;
}

h1 {
	font-family:"Trebuchet MS";
	font-size:20pt;	
	color:#333;
	letter-spacing:3px;
}

h2 {
	color:#333;
	margin:10px 0 10px 0;
	clear:both;
	width:920px;
	height:35px;
	background:#f5f5f5;
	border-top-style:solid;
	border-top-color:#cfcfcf;
	border-top-width:1px;
	border-bottom-style:solid;
	border-bottom-color:#cfcfcf;
	border-bottom-width:1px;
	padding-top:10px;
	margin-left:-10px;
	text-align: center;
	font-family:"Trebuchet MS";
	font-size:20px;
}

h3 {
	font-family:"Trebuchet MS";
	font-size:14pt;	
	color:#333;
}

h4 {
	margin:0 auto;
	height:31px;
	background:#f5f5f5;
	border-top-style:solid;
	border-top-color:#cfcfcf;
	border-top-width:1px;
	border-bottom-style:solid;
	border-bottom-color:#cfcfcf;
	border-bottom-width:1px;
	border-top:none;
	padding-top:10px;
	text-align: center;
	font-family:"Trebuchet MS"
}

a, a:visited {
	color:#111;
	text-decoration:none;
}

a:hover {
	color:#888;
	text-decoration:underline;
}

.clear {
	clear:both;
}

.online_servers{
	color:#000000; 
	background-color:#FCBG0D;
	margin-left:auto;
	margin-right:auto;
	text-align:center;
	border:1px solid black;
}

.online_servers tr td{
	border-left:1px solid gray;
	border-right:2px solid gray;
	border-top:1px solid gray;
	border-bottom:2px solid gray;
	background-color:#D1EFE3;
}
.statistics{
	color:#000000; 
	background-color:#F1F1F1;
	margin-left:auto;
	margin-right:auto;
	text-align:center;
	border:1px solid black;
}

#logintable {
	margin-left:auto;
	margin-right:auto;
	padding-top:20px;
}

.lostpass {
	margin-left:auto;
	margin-right:auto;
}
.tablesorter {
	font-family:arial;
	background-color: #FFF;
	font-size: 8pt;
	text-align: left;
	border-collapse: collapse;
	border-spacing: 1px;
	border-left: 1px solid #1F2A34;
	border-right: 1px solid #1F2A34;
}
.tablesorter thead tr th, table.tablesorter tfoot tr th {
	background-color: #e6EEEE;
	border: 1px solid grey;
	font-size: 8pt;
	padding: 4px;
}
.tablesorter thead tr .header {
	background-image: url(images/bg.gif);
	background-repeat: no-repeat;
	background-position: center right;
	cursor: pointer;
}

.tablesorter tbody td {
	color: #3D3D3D;
	padding: 4px;
	background-color: #FFF;
	vertical-align: top;
	border: 1px solid grey;
}
.tablesorter tbody tr.odd td {
	background-color:#F0F0F6;
}
.tablesorter thead tr .headerSortUp {
	background-image: url(images/asc.gif);
}
.tablesorter thead tr .headerSortDown {
	background-image: url(images/desc.gif);
}
.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
	background-color: #8dbdd8;
}
.tablesorter tfoot td {
	color: #3D3D3D;
	padding: 4px;
	background-color: #FFF;
	vertical-align: top;
}
.hidden{
	visibility:hidden;
	font-size:0px;
}
.expand-child td div{
}
.player_monitor {
	font-style:bold;
	margin-left:0;
	margin-right:auto;
	width:55%;
}

.player_monitor th{
	background:black;
	color:green;
}
.player_monitor tbody tr td{
	color:green;
}
img{
	border:0px solid transparent;
}
/* ... */

